# aoc

./: Cargo.toml  Makefile  README.md  notes.md
d1/: d1.py
d2/: d2.py
d3/: d3.cpp
d4/: Cargo.toml  d4.cpp
d4/src/: main.rs
d5/: Cargo.toml
d5/src/: main.rs
day01/src/: main.rs
day03/: README.md
day03/src/: main.rs
day07/: README.md
day07/src/: main.rs
day08/src/: main.rs
day09/: README.md
day1/: Cargo.toml
day10/: README.md  day10_1.py  day10_2.py
day10/src/: main.rs
day11/: Cargo.toml  README.md  day10.py
day11/src/: main.rs
day12/: Cargo.toml  README.md  solution.py
day12/src/: main.rs
day13/: Cargo.toml  README.md  solution.py
day13/src/: main.rs
day14/: README.md
day14/src/: main.rs
day15/: Cargo.toml  README.md
day15/src/: main.rs
day16/: Cargo.toml  README.md  solution.py
day16/src/: main.rs
day17/: README.md  solution.py
day17/src/: main.rs
day18/: Cargo.toml  README.md
day18/src/: main.rs
day19/: Cargo.toml  README.md
day19/src/: main.rs
day1_1/: Cargo.toml
day1_1/src/: main.rs
day1_2/: Cargo.toml
day1_2/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day20/: README.md  solution.py
day21/: README.md
day22/: README.md  bricks.xopp
day23/: Cargo.toml  README.md  input
day24/: README.md  sol2.py
day25/: README.md  sol.py
day2_2/: Cargo.toml
day3_1/: Cargo.toml
day3_2/: Cargo.toml
day4/: Cargo.toml  README.md
day4_1/: Cargo.toml
day4_2/: Cargo.toml
day5/: Cargo.toml  README.md
day5_1/: Cargo.toml
day5_2/: Cargo.toml
day6/: README.md
day7/: README.md
day8/: Cargo.toml  README.md
(+23 files in other folders)
