[workspace]
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "day6",
    "day7",
    "day8",
    "day9",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
]
resolver = "2"

[workspace.dependencies]
nom = "7.1.3"
rayon = "1.8.0"   # Simple work-stealing parallelism for Rust
colored = "2.1.0" # The most simple way to add colors in your terminal
