[workspace]
members = [
    "day01",
    "day02",
    "day03",
    "day04",
    "day05",
    "day06",
    "day07",
    "day08",
    "day09",
    "day10",
    "day11",
    "day12",
    "day13",
    "day14",
    "day15",
    "day16",
    "day17",
    "day18",
    "day19",
    "day20",
    "day21",
    "day22",
    "day23",
    "day24",
    "utils",
]
resolver = "2"

[workspace.dependencies]
nom = "7.1.3"
rayon = "1.8.0"              # Simple work-stealing parallelism for Rust
colored = "2.1.0"            # The most simple way to add colors in your terminal
anyhow = "1.0.75"            # Flexible concrete Error type built on std::error::Error
utils = { path = "./utils" }
