[package]
name = "d4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"       # An implementation of regular expressions for Rust. This implementation uses finite automata …
lazy_static = "1.4.0" # A macro for declaring lazily evaluated statics in Rust.
